@@ -103,6 +103,7 @@
 58. Improve look of Gtk3 style spinbox.
 59. Use xdg-open for "Open In File Manager" action of folder page.
 60. When searching for album information, use the album-artist of the track.
+61. Overlay-ish looking scrollbars for ambiance theme.
 
 0.9.2
 -----
